[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cube"
version = "0.1.1"
authors = [
  { name="RikoNaka", email="xxy1836@gmail.com" },
]
description = "Cube service app"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "CubeRaspberryLib3>=0.1.7",
  "psutil>=7.0.0",
]

[project.scripts]
cube = "cube.app:main"